
** Mwheel

---
*** New user options for alternate wheel events.
The options 'mouse-wheel-down-alternate-event', 'mouse-wheel-up-alternate-event',
'mouse-wheel-left-alternate-event', and 'mouse-wheel-right-alternate-event' have
been added to better support systems where two kinds of wheel events can be
received.


* Changes in Specialized Modes and Packages in Emacs 29.1

** Registers

+++
*** Buffer names can now be stored in registers.
For instance, to enable jumping to the *Messages* buffer with
`C-x r j m':

    (set-register ?m '(buffer . "*Messages*"))

** pixel-fill

+++
*** This is a new package that deals with filling variable-pitch text.

+++
*** New function 'pixel-fill-region'.
This fills the region to be no wider than a specified pixel width.

** Info

---
*** New command 'Info-goto-node-web' and key binding 'G'.
This will take you to the gnu.org web server's version of the current
info node.  This command only works for the Emacs and Emacs Lisp manuals.

** vc

---
*** 'C-x v v' on an unregistered file will now use the most specific backend.
Previously, if you had an SVN-covered "~/" directory, and a Git-covered
directory in "~/foo/bar", using 'C-x v v' on a new, unregistered file
"~/foo/bar/zot" would register it in the SVN repository in "~/" instead of
in the Git repository in "~/foo/bar".  This makes this command
consistent with 'vc-responsible-backend'.

** Message

---
*** New user option 'mml-attach-file-at-the-end'.
If non-nil, 'C-c C-a' will put attached files at the end of the message.

---
*** Message Mode now supports image yanking.

** HTML Mode

---
*** HTML Mode now supports "text/html" and "image/*" yanking.

** Texinfo Mode

---
*** 'texinfo-mode' now has a specialised 'narrow-to-defun' definition.
It narrows to the current node.

** eww/shr

+++
*** New user option 'shr-use-xwidgets-for-media'.
If non-nil (and Emacs has been built with support for xwidgets),
display <video> elements with an xwidget.  Note that this is