@@ -295,6 +295,10 @@ received.
 
 * Changes in Specialized Modes and Packages in Emacs 29.1
 
+** New minor mode 'glyphless-display-mode'.
+This allows an easy way to toggle seeing all glyphless characters in
+the current buffer.
+
 ** Registers
 
 +++
